<?xml version="1.0"?>
<package format="2">
  <name>racecar_desktop</name>
  <version>0.0.0</version>
  <description>The racecar_desktop package</description>

  <maintainer email="theokanning@gmail.com">theo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
